<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:gravity="center">
    <TextView
        android:id="@+id/txtLoginHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_now"
        android:layout_gravity="start"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/primaryColor"
        android:layout_marginHorizontal="12dp"
        android:fontFamily="sans-serif-medium"/>

    <TextView
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:id="@+id/txtLoginSubHeader"
        android:layout_gravity="start"
        android:layout_marginVertical="12dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/please_login_to_continue_using_app"
        android:textColor="#2962FF" />

<!--    <EditText-->
<!--        android:id="@+id/et_email"-->
<!--        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="8dp"-->
<!--        android:layout_marginVertical="18dp"-->
<!--        android:autofillHints=""-->
<!--        android:fontFamily="sans-serif-condensed"-->
<!--        android:hint="@string/email"-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:minHeight="48dp"-->
<!--        android:paddingHorizontal="8dp"-->
<!--        android:paddingVertical="12dp"-->
<!--        android:textColor="@color/white"-->
<!--        android:textColorHint="#4E342E"-->
<!--        android:textSize="16sp" />-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:endIconMode="clear_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:fontFamily="sans-serif-condensed"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


<!--    <EditText-->
<!--        android:id="@+id/et_password"-->
<!--        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="8dp"-->
<!--        android:autofillHints=""-->
<!--        android:fontFamily="sans-serif-condensed"-->
<!--        android:hint="@string/password"-->
<!--        android:inputType="textPassword"-->
<!--        android:minHeight="48dp"-->
<!--        android:paddingHorizontal="8dp"-->
<!--        android:paddingVertical="12dp"-->
<!--        android:textColor="@color/white"-->
<!--        android:textColorHint="#4E342E"-->
<!--        android:textSize="16sp" />-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="18dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:background="@drawable/btn_bg"
        android:paddingVertical="16dp"
        android:text="@string/login"
        android:textColor="#FFFFFF" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/don_t_have_an_account"
            android:textColor="#2962FF" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:id="@+id/signUpText"
            android:layout_marginStart="4dp"
            android:fontFamily="sans-serif-medium"
            style="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/primaryColor"/>
    </LinearLayout>

</LinearLayout>