<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="16dp"
    android:id="@+id/cardQuiz"
    app:cardCornerRadius="12dp"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@color/primaryColor"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:id="@+id/iconQuiz"
            android:layout_height="80dp"
            android:src="@drawable/pic1"
            android:contentDescription="@string/icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textQuizTitle"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="16sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/mathematics"
            android:textColor="@color/white"
            android:layout_marginVertical="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textQuizDate"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/_21_07_2024"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />



    </LinearLayout>
</androidx.cardview.widget.CardView>