<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginIntro">

    <TextView
        android:id="@+id/txtLoginSubHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isn_t_life_is_collection_of_weird_quizzes_with_n_no_answers_to_half_of_the_questions"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/primaryColor"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLoginHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_the_quiz_master"
        android:textColor="@color/primaryColor"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintBottom_toTopOf="@+id/txtLoginSubHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/txtLoginHeadline"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:id="@+id/imgLoginLogo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:contentDescription="@string/login_logo"
            app:srcCompat="@drawable/quizlogo" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/getStartedBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:paddingVertical="16dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginSubHeader" />


</androidx.constraintlayout.widget.ConstraintLayout>