<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="32dp"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/txtStayConnected"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/stay_connected"
        android:textColor="@color/primaryColor" />

    <TextView
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="12dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/enter_your_email_address_and_password_to_get_access_n_to_your_account"
        android:textColor="#2962FF" />

    <!--    <EditText-->
    <!--        android:id="@+id/et_email"-->
    <!--        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginHorizontal="12dp"-->
    <!--        android:layout_marginVertical="18dp"-->
    <!--        android:autofillHints=""-->
    <!--        android:fontFamily="sans-serif-condensed"-->
    <!--        android:hint="@string/email"-->
    <!--        android:inputType="textEmailAddress"-->
    <!--        android:minHeight="48dp"-->
    <!--        android:paddingHorizontal="8dp"-->
    <!--        android:paddingVertical="12dp"-->
    <!--        android:textColor="@color/white"-->
    <!--        android:textColorHint="#4E342E"-->
    <!--        android:textSize="16sp" />-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:endIconMode="clear_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

<!--    <EditText-->
<!--        android:id="@+id/et_password"-->
<!--        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="12dp"-->
<!--        android:autofillHints=""-->
<!--        android:fontFamily="sans-serif-condensed"-->
<!--        android:hint="@string/password"-->
<!--        android:inputType="textPassword"-->
<!--        android:minHeight="48dp"-->
<!--        android:paddingHorizontal="8dp"-->
<!--        android:paddingVertical="12dp"-->
<!--        android:textColor="@color/white"-->
<!--        android:textColorHint="#4E342E"-->
<!--        android:textSize="16sp" />-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

<!--    <EditText-->
<!--        android:id="@+id/et_confirm_password"-->
<!--        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="12dp"-->
<!--        android:layout_marginVertical="18dp"-->
<!--        android:autofillHints=""-->
<!--        android:fontFamily="sans-serif-condensed"-->
<!--        android:hint="@string/confirm_password"-->
<!--        android:inputType="textPassword"-->
<!--        android:minHeight="48dp"-->
<!--        android:paddingHorizontal="8dp"-->
<!--        android:paddingVertical="12dp"-->
<!--        android:textColor="@color/white"-->
<!--        android:textColorHint="#4E342E"-->
<!--        android:textSize="16sp" />-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/confirm_password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="14dp"
        android:background="@drawable/btn_bg"
        android:paddingVertical="16dp"
        android:text="@string/sign_up"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/already_have_an_account"
            android:textColor="#2962FF" />

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:id="@+id/loginTxt"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login"
            android:textColor="@color/primaryColor" />
    </LinearLayout>

</LinearLayout>